...
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_play_1_games_online"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:text="@string/play_one_game"
                android:textSize="15sp"
                app:cornerRadius="32dp"
...
