...
    <string name="text">Text</string>
    <string name="value">Value</string>
    <string name="edit_icon_desc">edit icon</string>
    <string name="dump_dbg_infos_pref_text">Dump debug infos</string>
    <string name="dump_sys_settings_key">dump_sys_settings</string>
    <string name="rock_paper_scissors">Rock Paper Scissors</string>
    <string name="ready_to_play">Ready to play!</string>
</resources>
